--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 .container{
     margin: 0 auto;
     width: 1200px;
-    background-color: rgb(182, 194, 216);
 }
 
 .list {
@@ -16,7 +15,7 @@
 #header {
     width: 100%;
     height: auto;
-    background-color: rgb(186, 161, 243);
+   
     padding: 50px 0;
 }
 
@@ -24,7 +23,7 @@
     display: flex;
     height: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content:right;
 }
 
 .list li {
@@ -44,9 +43,165 @@
     color: rgb(36, 5, 5);
     transition: 1s all ease;
 }
+.banner-btn button{
+padding: 10px 25px;
+border-radius: 8px;
+border: none;
+color: #FFF;
+    background: #E76F51;
+    cursor: pointer;
+    font-size: 20px;
+    transition: 5s all ease;
+}
+.banner-btn button:hover{
+    background-color: rgb(41, 9, 3);
+    color: white;
+    transition: .5s all ease;
+}
+
+/* 
+......----------------------details for honda----------------------- */
+#banner{
+    background: #264653;
+}
+.honda-detail{
+    width: 100%;
+   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 80px 0;
+}
+.left-side-detail{
+    width: 40%;
+   
+}
+
+.top-p p{
+    color: #FFF;
+     
+        font-family: Poppins;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 300;
+       margin-bottom: 10px;
+}
+
+.left-side-detail h1{
+    color: #FFF;
+        font-family: Poppins;
+        font-size: 48px;
+      font-weight: 600;
+      margin-bottom: 13px;
+
+      
+}
+
+
+.left-side-detail p{
+    color: #E0E0E0;
+      
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 300;
+        margin-bottom: 10px;
+       
+}
+
+
+.btn button a{
+    text-decoration: none;
+    margin-top: 11px;
+}
+
+
+/* ,,,,,,------right side detail-------- */
+.right-side-detail{
+    position: relative;
+}
+
+.banner-img {position: absolute;
+top: 35px;
+right: 30px;
+width: 101px;
+height: 101px;
+
+}
+.honda-cvr{
+    z-index: 2;
+}
+
+/* .......................------------------feature details------------ */
+.feature-body{
+    padding: 100px 0;
+}
+.feature-top{
+    text-align: center;
+    
+}
+
+.feature-top h1{
+    color: #000;
+        font-family: Poppins;
+        font-size: 48px;
+        font-weight: 600;
+      
+}
+.feature-top p{
+    color: #E76F51;
+     
+        font-family: sans-serif;
+        font-size: 20px;
+        position: relative;
+        font-weight: 600;
+        margin-top: 10px;
+ 
+}
+.feature-top p::after{
+    position: absolute;
+    content: "";
+    width: 100px;
+    height: 5px;
+    background-color: #E76F51 ;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+
+}
+/* < !-- ...................................feature detail img-------------------- --> */
+
+.banner-pic{
+    display: flex;
+    justify-content: space-between;
+
+}
+.frist-img{
+    width: 350px;
+}
+.frist-img img{
+    filter: opacity(.5);
+}
+.second-img{
+    width: 350px;
+}
+
+
+
+
+
+
 
 /* card unit */
-
+.card-top h1{
+    color: #0A0826;
+        text-align: center;
+        font-family:sans-serif;
+        font-size: 48px;
+       margin: 100px 0;
+        font-weight: 600;
+       
+      
+}
 .all-card{
   
     display: flex;
@@ -96,12 +251,108 @@ transition: 5s all ease;
 margin-top: 8px;
 
 
+
 }
 .btn button:hover{
     background-color: tomato;
     color: white;
     transition: .5s all ease;
 }
+
+
+
+
+/* < !-- -------------------------started Happy Clients ------------------------ --> */
+
+
+
+.client-top{
+    text-align: center;
+    margin-top: 150px;
+}
+
+.client-top h1{
+    color: #0A0826;
+        font-family:sans-serif;
+        font-size: 48px;
+       
+        font-weight: 600;
+        
+}
+
+.client-top h1 span{
+    color: #E76F51;
+        font-family: sans-serif;
+        font-size: 48px;
+  
+        font-weight: 600;
+       
+}
+
+.all-client-info{
+   display: flex;
+   justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.detail-rate{
+    width: 300px;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    padding: 40px 35px;
+}
+.client-pic {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin: 35px 0;
+}
+.client-p p{
+color: #6C6C6C;
+    text-align: center;
+    font-family:sans-serif;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 400;
+    margin: 10px 0;
+
+}
+.all-star{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.client-name{
+    text-align: center;
+}
+.client-name h2{
+color: #23A6F0;
+    font-family: sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    margin: 13px 0;
+
+   
+}
+.client-name h3{
+color: #252B42;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+
+   
+}
+
+
+
+
+
+
+
+
 
 
 /* --------------responsibe------------------*/
@@ -135,6 +386,13 @@ margin-top: 8px;
             background-color: rgb(226, 95, 148);
             padding: 25px 0;
 
+
+        }
+        .nav-body{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
 
         .list li {
@@ -149,6 +407,113 @@ margin-top: 8px;
 
 
         }
+                .banner-btn button {
+                    padding: 10px 25px;
+                    border-radius: 8px;
+                    border: none;
+                    color: #FFF;
+                    background: #E76F51;
+                    cursor: pointer;
+                    font-size: 20px;
+                    transition: 5s all ease;
+                }
+
+
+             /* ---------------------------honda details----------- */
+
+
+.honda-detail{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.left-side-detail {
+    width: 90%;
+
+}
+
+
+
+
+.top-p p {
+    color: #FFF;
+
+    font-family: Poppins;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 300;
+    margin-bottom: 8px;
+}
+
+.left-side-detail h1 {
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 7px;
+
+
+}
+
+
+.left-side-detail p {
+    color: #E0E0E0;
+
+    font-family: Poppins;
+    font-size: 17px;
+    font-weight: 400;
+    margin-bottom: 10px;
+
+}
+/* ,,,,,,------right side detail-------- */
+.right-side-detail {
+    position: relative;
+    margin-top: 30px;
+}
+
+.banner-img {
+    position: absolute;
+    top: 35px;
+    right: 30px;
+    z-index: 1;
+    width: 50px;
+    height: 50px;
+
+
+
+}
+ .honda-cvr{
+    width: 280px;
+  
+}
+
+/* < !-- ...................................feature detail img-------------------- --> */
+
+.banner-pic {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.frist-img {
+    width: 270px;
+}
+
+.frist-img img {
+    filter: opacity(.5);
+}
+
+.second-img {
+    width: 270px;
+}
+
+
+
         /* card sector */
 .container{
     width: 100%;
@@ -157,7 +522,7 @@ margin-top: 8px;
            
             display: flex;
             flex-direction: column;
-            background-color: aqua;
+           
            
             
         }
@@ -171,16 +536,27 @@ margin-top: 8px;
 .card-detail img{
     width: 100%;
 }
+/* 
+< !-- -------------------------started Happy Clients ------------------------ -->*/
+
+.all-client-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.detail-rate {
+    width: 290px;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    padding: 40px 35px;
+    margin-top: 70px;
+}
     }
 
 
 
-
-
-
-
-
-
-    
+     
 
 
